# testcereal

./: CMakeLists.txt  LICENSE  base.hpp  derived.hpp  main.cpp
